Added ability to evaluate model, and to track model usage
